# serializer version: 1
# name: test_get_data
  list([
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
  ])
# ---
# name: test_get_site_average
  list([
    dict({
      'site_code': 'CLDP0001',
      'value': 1.23,
    }),
    dict({
      'site_code': 'CLDP0002',
      'value': 4.56,
    }),
  ])
# ---
